// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a currency logo with network logo 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "height": 20,
        "width": 20,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "display": "flex",
          "position": "absolute",
          "right": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders a currency logo without network logo 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "height": 20,
        "width": 20,
      },
    ]
  }
>
  <Image
    source={
      Array [
        Object {
          "uri": "https://raw.githubusercontent.com/uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png",
        },
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "slategrey",
          "resizeMode": "cover",
        },
        Object {
          "borderRadius": 8,
          "height": 16,
          "width": 16,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "display": "flex",
          "position": "absolute",
          "right": 0,
        },
      ]
    }
  />
</View>
`;
